--- a/home.html
+++ b/home.html
@@ -115,87 +115,143 @@
       </div>
       <footer class="fixed-bottom bg-black p-0 m-0 container-fluid" style="height: 90px; width: 100wh">
         <div class="row p-2">
-          <div class="col-3 row px-3 d-flex justify-content-center">
-            <div class="col-3"><img src="./assets/imgs/main/image-1.jpg" style="width: 50px" /></div>
-            <div class="col-4">
-              <div>qui ci va il titolo del brano</div>
-              <div>qui l'artista</div>
-            </div>
-
-            <a class="col-1"
-              ><span style="width: 20px"
-                ><svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
-                  <path d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"></path>
-                  <path
-                    d="M11.75 8a.75.75 0 0 1-.75.75H8.75V11a.75.75 0 0 1-1.5 0V8.75H5a.75.75 0 0 1 0-1.5h2.25V5a.75.75 0 0 1 1.5 0v2.25H11a.75.75 0 0 1 .75.75z"
-                  ></path>
-                </svg> </span
-            ></a>
-          </div>
-          <div class="col-6">
-            <div>
-              <div class="row justify-content-center">
-                <!-- qui ci vanno il tasto random e quello per riprodurre il brano precedente -->
-                <div class="col-2">
-                  <button class="btn ms-auto">
-                    <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
-                      <path
-                        fill="#B2B2B2"
-                        d="M13.151.922a.75.75 0 1 0-1.06 1.06L13.109 3H11.16a3.75 3.75 0 0 0-2.873 1.34l-6.173 7.356A2.25 2.25 0 0 1 .39 12.5H0V14h.391a3.75 3.75 0 0 0 2.873-1.34l6.173-7.356a2.25 2.25 0 0 1 1.724-.804h1.947l-1.017 1.018a.75.75 0 0 0 1.06 1.06L15.98 3.75 13.15.922zM.391 3.5H0V2h.391c1.109 0 2.16.49 2.873 1.34L4.89 5.277l-.979 1.167-1.796-2.14A2.25 2.25 0 0 0 .39 3.5z"
-                      ></path>
-                      <path
-                        fill="#B2B2B2"
-                        d="m7.5 10.723.98-1.167.957 1.14a2.25 2.25 0 0 0 1.724.804h1.947l-1.017-1.018a.75.75 0 1 1 1.06-1.06l2.829 2.828-2.829 2.828a.75.75 0 1 1-1.06-1.06L13.109 13H11.16a3.75 3.75 0 0 1-2.873-1.34l-.787-.938z"
-                      ></path>
-                    </svg>
-                  </button>
-                  <button class="btn">
-                    <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
-                      <path
-                        fill="#B2B2B2"
-                        d="M3.3 1a.7.7 0 0 1 .7.7v5.15l9.95-5.744a.7.7 0 0 1 1.05.606v12.575a.7.7 0 0 1-1.05.607L4 9.149V14.3a.7.7 0 0 1-.7.7H1.7a.7.7 0 0 1-.7-.7V1.7a.7.7 0 0 1 .7-.7h1.6z"
-                      ></path>
-                    </svg>
-                  </button>
-                </div>
-                <div class="col-2 d-flex justify-content-center">
-                  <!-- qui vi va il tasto play -->
-                  <button
-                    class="btn bg-white rounded-circle d-flex align-items-center"
-                    style="height: 46px; width: 46px"
-                  >
-                    <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 23px">
-                      <path
-                        fill="#000000"
-                        d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"
-                      ></path>
-                    </svg>
-                  </button>
-                </div>
-                <div class="col-2">
-                  <!-- qui ci va il tasto > e il loop -->
-                  <button class="btn">
-                    <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
-                      <path
-                        fill="#B2B2B2"
-                        d="M12.7 1a.7.7 0 0 0-.7.7v5.15L2.05 1.107A.7.7 0 0 0 1 1.712v12.575a.7.7 0 0 0 1.05.607L12 9.149V14.3a.7.7 0 0 0 .7.7h1.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-1.6z"
-                      ></path>
-                    </svg>
-                  </button>
-                  <button class="btn">
-                    <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
-                      <path
-                        fill="#B2B2B2"
-                        d="M0 4.75A3.75 3.75 0 0 1 3.75 1h8.5A3.75 3.75 0 0 1 16 4.75v5a3.75 3.75 0 0 1-3.75 3.75H9.81l1.018 1.018a.75.75 0 1 1-1.06 1.06L6.939 12.75l2.829-2.828a.75.75 0 1 1 1.06 1.06L9.811 12h2.439a2.25 2.25 0 0 0 2.25-2.25v-5a2.25 2.25 0 0 0-2.25-2.25h-8.5A2.25 2.25 0 0 0 1.5 4.75v5A2.25 2.25 0 0 0 3.75 12H5v1.5H3.75A3.75 3.75 0 0 1 0 9.75v-5z"
-                      ></path>
-                    </svg>
-                  </button>
-                </div>
+          <div class="row px-3 d-flex justify-content-center">
+            <div class="d-flex align-items-center">
+              <div>
+                <img src="./assets/imgs/main/image-1.jpg" style="width: 50px" />
               </div>
-              <div>qui vi va 1div per il tempo, 1 div per la barra e 1 div per la durata del brano</div>
+              <div class="d-flex flex-column me-auto">
+                <div>qui ci va il titolo del brano</div>
+                <div>qui l'artista</div>
+              </div>
+              <div class="d-flex flex-column me-auto">
+                <div class="d-flex justify-content-center align-items-center">
+                  <div class="d-flex justify-content-end align-items-center">
+                    <button class="btn ms-auto">
+                      <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 15px">
+                        <path
+                          fill="#B2B2B2"
+                          d="M13.151.922a.75.75 0 1 0-1.06 1.06L13.109 3H11.16a3.75 3.75 0 0 0-2.873 1.34l-6.173 7.356A2.25 2.25 0 0 1 .39 12.5H0V14h.391a3.75 3.75 0 0 0 2.873-1.34l6.173-7.356a2.25 2.25 0 0 1 1.724-.804h1.947l-1.017 1.018a.75.75 0 0 0 1.06 1.06L15.98 3.75 13.15.922zM.391 3.5H0V2h.391c1.109 0 2.16.49 2.873 1.34L4.89 5.277l-.979 1.167-1.796-2.14A2.25 2.25 0 0 0 .39 3.5z"
+                        ></path>
+                        <path
+                          fill="#B2B2B2"
+                          d="m7.5 10.723.98-1.167.957 1.14a2.25 2.25 0 0 0 1.724.804h1.947l-1.017-1.018a.75.75 0 1 1 1.06-1.06l2.829 2.828-2.829 2.828a.75.75 0 1 1-1.06-1.06L13.109 13H11.16a3.75 3.75 0 0 1-2.873-1.34l-.787-.938z"
+                        ></path>
+                      </svg>
+                    </button>
+                    <button class="btn">
+                      <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 15px">
+                        <path
+                          fill="#B2B2B2"
+                          d="M3.3 1a.7.7 0 0 1 .7.7v5.15l9.95-5.744a.7.7 0 0 1 1.05.606v12.575a.7.7 0 0 1-1.05.607L4 9.149V14.3a.7.7 0 0 1-.7.7H1.7a.7.7 0 0 1-.7-.7V1.7a.7.7 0 0 1 .7-.7h1.6z"
+                        ></path>
+                      </svg>
+                    </button>
+                  </div>
+                  <div class="d-flex justify-content-center align-items-center">
+                    <button
+                      class="btn bg-white rounded-circle d-flex align-items-center"
+                      style="height: 40px; width: 40px"
+                    >
+                      <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 15px">
+                        <path
+                          fill="#000000"
+                          d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"
+                        ></path>
+                      </svg>
+                    </button>
+                  </div>
+                  <div class="d-flex justify-content-center align-items-center">
+                    <button class="btn">
+                      <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 15px">
+                        <path
+                          fill="#B2B2B2"
+                          d="M12.7 1a.7.7 0 0 0-.7.7v5.15L2.05 1.107A.7.7 0 0 0 1 1.712v12.575a.7.7 0 0 0 1.05.607L12 9.149V14.3a.7.7 0 0 0 .7.7h1.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-1.6z"
+                        ></path>
+                      </svg>
+                    </button>
+                    <button class="btn">
+                      <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 15px">
+                        <path
+                          fill="#B2B2B2"
+                          d="M0 4.75A3.75 3.75 0 0 1 3.75 1h8.5A3.75 3.75 0 0 1 16 4.75v5a3.75 3.75 0 0 1-3.75 3.75H9.81l1.018 1.018a.75.75 0 1 1-1.06 1.06L6.939 12.75l2.829-2.828a.75.75 0 1 1 1.06 1.06L9.811 12h2.439a2.25 2.25 0 0 0 2.25-2.25v-5a2.25 2.25 0 0 0-2.25-2.25h-8.5A2.25 2.25 0 0 0 1.5 4.75v5A2.25 2.25 0 0 0 3.75 12H5v1.5H3.75A3.75 3.75 0 0 1 0 9.75v-5z"
+                        ></path>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+                <div>qui vi va 1div per il tempo, 1 div per la barra e 1 div per la durata del brano</div>
+              </div>
+              <div class="d-flex align-items-center">
+                <button class="btn">
+                  <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
+                    <path fill="#B3B3B3" d="M11.196 8 6 5v6l5.196-3z"></path>
+                    <path
+                      fill="#B3B3B3"
+                      d="M15.002 1.75A1.75 1.75 0 0 0 13.252 0h-10.5a1.75 1.75 0 0 0-1.75 1.75v12.5c0 .966.783 1.75 1.75 1.75h10.5a1.75 1.75 0 0 0 1.75-1.75V1.75zm-1.75-.25a.25.25 0 0 1 .25.25v12.5a.25.25 0 0 1-.25.25h-10.5a.25.25 0 0 1-.25-.25V1.75a.25.25 0 0 1 .25-.25h10.5z"
+                    ></path>
+                  </svg>
+                </button>
+                <button class="btn">
+                  <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
+                    <path
+                      fill="#B3B3B3"
+                      d="M13.426 2.574a2.831 2.831 0 0 0-4.797 1.55l3.247 3.247a2.831 2.831 0 0 0 1.55-4.797zM10.5 8.118l-2.619-2.62A63303.13 63303.13 0 0 0 4.74 9.075L2.065 12.12a1.287 1.287 0 0 0 1.816 1.816l3.06-2.688 3.56-3.129zM7.12 4.094a4.331 4.331 0 1 1 4.786 4.786l-3.974 3.493-3.06 2.689a2.787 2.787 0 0 1-3.933-3.933l2.676-3.045 3.505-3.99z"
+                    ></path>
+                  </svg>
+                </button>
+                <button class="btn">
+                  <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
+                    <path
+                      fill="#B3B3B3"
+                      d="M15 15H1v-1.5h14V15zm0-4.5H1V9h14v1.5zm-14-7A2.5 2.5 0 0 1 3.5 1h9a2.5 2.5 0 0 1 0 5h-9A2.5 2.5 0 0 1 1 3.5zm2.5-1a1 1 0 0 0 0 2h9a1 1 0 1 0 0-2h-9z"
+                    ></path>
+                  </svg>
+                </button>
+                <button class="btn">
+                  <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
+                    <path
+                      fill="#B3B3B3"
+                      d="M8 6.438c.552 0 1-.434 1-.969 0-.535-.448-.969-1-.969s-1 .434-1 .969c0 .535.448.969 1 .969zm0 6.312a2.25 2.25 0 1 0 0-4.5 2.25 2.25 0 0 0 0 4.5z"
+                    ></path>
+                    <path
+                      fill="#B3B3B3"
+                      d="M2.002 2.75c0-.966.784-1.75 1.75-1.75h8.5c.966 0 1.75.784 1.75 1.75v11.5a1.75 1.75 0 0 1-1.75 1.75h-8.5a1.75 1.75 0 0 1-1.75-1.75V2.75zm1.75-.25a.25.25 0 0 0-.25.25v11.5c0 .138.112.25.25.25h8.5a.25.25 0 0 0 .25-.25V2.75a.25.25 0 0 0-.25-.25h-8.5z"
+                    ></path>
+                  </svg>
+                </button>
+                <button class="btn">
+                  <svg
+                    data-encore-id="icon"
+                    role="presentation"
+                    aria-label="Volume medio"
+                    aria-hidden="true"
+                    id="volume-icon"
+                    viewBox="0 0 16 16"
+                    style="width: 20px"
+                  >
+                    <path
+                      fill="#B3B3B3"
+                      d="M9.741.85a.75.75 0 0 1 .375.65v13a.75.75 0 0 1-1.125.65l-6.925-4a3.642 3.642 0 0 1-1.33-4.967 3.639 3.639 0 0 1 1.33-1.332l6.925-4a.75.75 0 0 1 .75 0zm-6.924 5.3a2.139 2.139 0 0 0 0 3.7l5.8 3.35V2.8l-5.8 3.35zm8.683 6.087a4.502 4.502 0 0 0 0-8.474v1.65a2.999 2.999 0 0 1 0 5.175v1.649z"
+                    ></path>
+                  </svg>
+                </button>
+
+                <div class="d-flex align-items-center">
+                  <input type="range" class="form-range" id="customRange1" style="width: 60px" />
+                </div>
+
+                <button class="btn">
+                  <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
+                    <path
+                      fill="#B3B3B3"
+                      d="M6.53 9.47a.75.75 0 0 1 0 1.06l-2.72 2.72h1.018a.75.75 0 0 1 0 1.5H1.25v-3.579a.75.75 0 0 1 1.5 0v1.018l2.72-2.72a.75.75 0 0 1 1.06 0zm2.94-2.94a.75.75 0 0 1 0-1.06l2.72-2.72h-1.018a.75.75 0 1 1 0-1.5h3.578v3.579a.75.75 0 0 1-1.5 0V3.81l-2.72 2.72a.75.75 0 0 1-1.06 0z"
+                    ></path>
+                  </svg>
+                </button>
+              </div>
             </div>
           </div>
-          <div class="col-3"></div>
         </div>
       </footer>
     </div>
