--- a/home.html
+++ b/home.html
@@ -13,14 +13,7 @@
           <div class="rounded bg-dark p-4 mb-2">
             <ul class="list-unstyled d-flex flex-column gap-3 m-0">
               <li class="align-middle">
-                <svg
-                  data-encore-id="icon"
-                  role="img"
-                  aria-hidden="true"
-                  class="Svg-sc-ytk21e-0 bneLcE home-icon QbaKKdcHNA2x3_YJvpYu"
-                  viewBox="0 0 24 24"
-                  style="width: 30"
-                >
+                <svg data-encore-id="icon" role="img" aria-hidden="true" class="Svg-sc-ytk21e-0 bneLcE home-icon QbaKKdcHNA2x3_YJvpYu" viewBox="0 0 24 24" style="width: 30">
                   <path
                     fill="#B3B3B3"
                     d="M12.5 3.247a1 1 0 0 0-1 0L4 7.577V20h4.5v-6a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v6H20V7.577l-7.5-4.33zm-2-1.732a3 3 0 0 1 3 0l7.5 4.33a2 2 0 0 1 1 1.732V21a1 1 0 0 1-1 1h-6.5a1 1 0 0 1-1-1v-6h-3v6a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V7.577a2 2 0 0 1 1-1.732l7.5-4.33z"
@@ -55,22 +48,13 @@
                 <button class="btn text-white mx-2 bg-dark" style="width: 40px; height: 40px">
                   <span style="display: block"
                     ><svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16">
-                      <path
-                        fill="#B3B3B3"
-                        d="M15.25 8a.75.75 0 0 1-.75.75H8.75v5.75a.75.75 0 0 1-1.5 0V8.75H1.5a.75.75 0 0 1 0-1.5h5.75V1.5a.75.75 0 0 1 1.5 0v5.75h5.75a.75.75 0 0 1 .75.75z"
-                      ></path>
+                      <path fill="#B3B3B3" d="M15.25 8a.75.75 0 0 1-.75.75H8.75v5.75a.75.75 0 0 1-1.5 0V8.75H1.5a.75.75 0 0 1 0-1.5h5.75V1.5a.75.75 0 0 1 1.5 0v5.75h5.75a.75.75 0 0 1 .75.75z"></path>
                     </svg>
                   </span>
                 </button>
                 <button class="btn text-white mx-2 bg-dark" style="width: 40px; height: 40px">
                   <span style="display: block"
-                    ><svg
-                      data-encore-id="icon"
-                      role="img"
-                      aria-hidden="true"
-                      viewBox="0 0 16 16"
-                      class="Svg-sc-ytk21e-0 cAMMLk"
-                    >
+                    ><svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 cAMMLk">
                       <path
                         fill="#B3B3B3"
                         d="M7.19 1A.749.749 0 0 1 8.47.47L16 7.99l-7.53 7.521a.75.75 0 0 1-1.234-.815.75.75 0 0 1 .174-.243l5.72-5.714H.75a.75.75 0 1 1 0-1.498h12.38L7.41 1.529a.749.749 0 0 1-.22-.53z"
@@ -110,10 +94,7 @@
                 <button class="btn text-white d-flex align-items-center">
                   <span class="pe-2">Recenti</span>
                   <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 15px">
-                    <path
-                      fill="#B3B3B3"
-                      d="M15 14.5H5V13h10v1.5zm0-5.75H5v-1.5h10v1.5zM15 3H5V1.5h10V3zM3 3H1V1.5h2V3zm0 11.5H1V13h2v1.5zm0-5.75H1v-1.5h2v1.5z"
-                    ></path>
+                    <path fill="#B3B3B3" d="M15 14.5H5V13h10v1.5zm0-5.75H5v-1.5h10v1.5zM15 3H5V1.5h10V3zM3 3H1V1.5h2V3zm0 11.5H1V13h2v1.5zm0-5.75H1v-1.5h2v1.5z"></path>
                   </svg>
                 </button>
               </div>
@@ -122,34 +103,24 @@
           </div>
         </header>
 
-        <main class="col-8 rounded">
+        <main class="col-8 rounded" data-bs-theme="dark">
           <div class="bg-dark p-0 rounded" style="height: 100vh">
             <div class="d-flex align-items-center pt-3 px-2">
               <div class="me-auto">
                 <button class="btn rounded-circle bg-black" style="width: 40px; height: 40px">
                   <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 21px" viewBox="0 0 20 20">
-                    <path
-                      fill="#B3B3B3"
-                      d="M11.03.47a.75.75 0 0 1 0 1.06L4.56 8l6.47 6.47a.75.75 0 1 1-1.06 1.06L2.44 8 9.97.47a.75.75 0 0 1 1.06 0z"
-                    ></path>
+                    <path fill="#B3B3B3" d="M11.03.47a.75.75 0 0 1 0 1.06L4.56 8l6.47 6.47a.75.75 0 1 1-1.06 1.06L2.44 8 9.97.47a.75.75 0 0 1 1.06 0z"></path>
                   </svg>
                 </button>
                 <button class="btn rounded-circle bg-black" style="width: 40px; height: 40px">
                   <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 21px" viewBox="0 0 20 20">
-                    <path
-                      fill="#B3B3B3"
-                      d="M4.97.47a.75.75 0 0 0 0 1.06L11.44 8l-6.47 6.47a.75.75 0 1 0 1.06 1.06L13.56 8 6.03.47a.75.75 0 0 0-1.06 0z"
-                    ></path>
+                    <path fill="#B3B3B3" d="M4.97.47a.75.75 0 0 0 0 1.06L11.44 8l-6.47 6.47a.75.75 0 1 0 1.06 1.06L13.56 8 6.03.47a.75.75 0 0 0-1.06 0z"></path>
                   </svg>
                 </button>
               </div>
               <div class="d-flex">
-                <button class="btn bg-white rounded-pill"><b>Esplora Premium</b></button>
-                <a
-                  class="btn rounded-pill bg-black rounded-pill text-white"
-                  draggable="false"
-                  data-encore-id="buttonPrimary"
-                  href="#"
+                <button class="btn bg-white rounded-pill text-black"><b>Esplora Premium</b></button>
+                <a class="btn rounded-pill bg-black rounded-pill text-white" draggable="false" data-encore-id="buttonPrimary" href="#"
                   ><span
                     ><span
                       ><svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
@@ -157,10 +128,7 @@
                           fill="#FFFFFF"
                           d="M4.995 8.745a.75.75 0 0 1 1.06 0L7.25 9.939V4a.75.75 0 0 1 1.5 0v5.94l1.195-1.195a.75.75 0 1 1 1.06 1.06L8 12.811l-.528-.528a.945.945 0 0 1-.005-.005L4.995 9.805a.75.75 0 0 1 0-1.06z"
                         ></path>
-                        <path
-                          fill="#FFFFFF"
-                          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13z"
-                        ></path></svg></span
+                        <path fill="#FFFFFF" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13z"></path></svg></span
                     ><span>Installa app</span></span
                   ></a
                 >
@@ -185,10 +153,23 @@
                 </button>
               </div>
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="col-12 my-3 bg-dark" style="background: rgb(0, 0, 0); background: linear-gradient(17deg, rgba(0, 0, 0, 1) 50%, rgba(32, 32, 32, 0.644782913165266) 100%)">
+              <div id="annunci" class="d-flex p-3">
+                <img src="" id="imgAnnunci" class="me-5 object-fit-cover" width="200" height="200" alt="cover album" />
+              </div>
+            </div>
+            <div id="perTe" class="row g-0 bg-dark">
+              <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Create per te</a>
+            </div>
+            <div id="perOggi" class="row g-0 bg-dark">
+              <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Consigliata per oggi</a>
+            </div>
+            <div id="popolari" class="row g-0 bg-dark">
+              <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Album più popolari</a>
+            </div>
+            <div id="mixPref" class="row g-0 bg-dark">
+              <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">I tuoi mix preferiti</a>
+            </div>
           </div>
         </main>
         <aside class="col-2 rounded bg-dark" style="height: 100vh"></aside>
@@ -229,15 +210,9 @@
                     </button>
                   </div>
                   <div class="d-flex justify-content-center align-items-center">
-                    <button
-                      class="btn bg-white rounded-circle d-flex align-items-center"
-                      style="height: 40px; width: 40px"
-                    >
+                    <button class="btn bg-white rounded-circle d-flex align-items-center" style="height: 40px; width: 40px">
                       <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 15px">
-                        <path
-                          fill="#000000"
-                          d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"
-                        ></path>
+                        <path fill="#000000" d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"></path>
                       </svg>
                     </button>
                   </div>
@@ -290,10 +265,7 @@
                 </button>
                 <button class="btn">
                   <svg data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" style="width: 20px">
-                    <path
-                      fill="#B3B3B3"
-                      d="M8 6.438c.552 0 1-.434 1-.969 0-.535-.448-.969-1-.969s-1 .434-1 .969c0 .535.448.969 1 .969zm0 6.312a2.25 2.25 0 1 0 0-4.5 2.25 2.25 0 0 0 0 4.5z"
-                    ></path>
+                    <path fill="#B3B3B3" d="M8 6.438c.552 0 1-.434 1-.969 0-.535-.448-.969-1-.969s-1 .434-1 .969c0 .535.448.969 1 .969zm0 6.312a2.25 2.25 0 1 0 0-4.5 2.25 2.25 0 0 0 0 4.5z"></path>
                     <path
                       fill="#B3B3B3"
                       d="M2.002 2.75c0-.966.784-1.75 1.75-1.75h8.5c.966 0 1.75.784 1.75 1.75v11.5a1.75 1.75 0 0 1-1.75 1.75h-8.5a1.75 1.75 0 0 1-1.75-1.75V2.75zm1.75-.25a.25.25 0 0 0-.25.25v11.5c0 .138.112.25.25.25h8.5a.25.25 0 0 0 .25-.25V2.75a.25.25 0 0 0-.25-.25h-8.5z"
@@ -301,15 +273,7 @@
                   </svg>
                 </button>
                 <button class="btn">
-                  <svg
-                    data-encore-id="icon"
-                    role="presentation"
-                    aria-label="Volume medio"
-                    aria-hidden="true"
-                    id="volume-icon"
-                    viewBox="0 0 16 16"
-                    style="width: 20px"
-                  >
+                  <svg data-encore-id="icon" role="presentation" aria-label="Volume medio" aria-hidden="true" id="volume-icon" viewBox="0 0 16 16" style="width: 20px">
                     <path
                       fill="#B3B3B3"
                       d="M9.741.85a.75.75 0 0 1 .375.65v13a.75.75 0 0 1-1.125.65l-6.925-4a3.642 3.642 0 0 1-1.33-4.967 3.639 3.639 0 0 1 1.33-1.332l6.925-4a.75.75 0 0 1 .75 0zm-6.924 5.3a2.139 2.139 0 0 0 0 3.7l5.8 3.35V2.8l-5.8 3.35zm8.683 6.087a4.502 4.502 0 0 0 0-8.474v1.65a2.999 2.999 0 0 1 0 5.175v1.649z"
@@ -333,28 +297,7 @@
             </div>
           </div>
         </div>
-        </footer>
-        <main class="col-7 bg-black" data-bs-theme="dark">
-          <div class="col-12 my-3 bg-dark" style="background: rgb(0, 0, 0); background: linear-gradient(17deg, rgba(0, 0, 0, 1) 50%, rgba(32, 32, 32, 0.644782913165266) 100%)">
-            <div id="annunci" class="d-flex p-3">
-              <img src="" id="imgAnnunci" class="me-5 object-fit-cover" width="200" height="200" alt="cover album" />
-            </div>
-          </div>
-          <div id="perTe" class="row g-0 bg-dark">
-            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3 href="#">Create per te</a>
-          </div>
-          <div id="perOggi" class="row g-0 bg-dark">
-            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Consigliata per oggi</a>
-          </div>
-          <div id="popolari" class="row g-0 bg-dark">
-            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Album più popolari</a>
-          </div>
-          <div id="mixPref" class="row g-0 bg-dark">
-            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">I tuoi mix preferiti</a>
-          </div>
-        </main>
-        <aside class="col-2 bg-dark"></aside>
-      </div>
+      </footer>
     </div>
 
     <script
